--- a/src/styles/result-viewer.less
+++ b/src/styles/result-viewer.less
@@ -184,10 +184,12 @@
     position: relative;
     &:before {
       .fa-icon();
-      content: @fa-var-map-marker;
+      content: @fa-var-map-marker-alt;
       position: absolute;
       top: 3px;
       left: 0;
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
     }
     @media (min-width: @grid-float-breakpoint) {
       padding-left: 0;
