Fix event calendar item

--- a/src/styles/result-viewer.less
+++ b/src/styles/result-viewer.less
@@ -217,10 +217,12 @@
     position: relative;
     &:before {
       .fa-icon();
-      content: @fa-var-calendar;
+      content: @fa-var-calendar-alt;
       position: absolute;
       top: 0;
       left: 0;
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
     }
     @media (min-width: @grid-float-breakpoint) {
       padding-left: 0;
