--- a/src/styles/editable-click.less
+++ b/src/styles/editable-click.less
@@ -9,6 +9,8 @@
     position: absolute;
     right: 5px;
     bottom: 5px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
   }
   &:hover {
     border-color: @gray-light;
