Use correct Fontawesome warning triangle

--- a/src/search/components/search-bar.directive.html
+++ b/src/search/components/search-bar.directive.html
@@ -16,7 +16,7 @@
         <li><a href="saved-searches" translate-once="search.manage">Beheren</a></li>
       </ul>
     </span>
-    <i ng-show="sb.hasErrors" class="fa fa-warning warning-icon" tooltip-append-to-body="true"
+    <i ng-show="sb.hasErrors" class="fas fa-exclamation-triangle warning-icon" tooltip-append-to-body="true"
        tooltip-placement="bottom" uib-tooltip="{{sb.errors}}"></i>
   </div>
   <button type="submit" class="btn udb-search-button" ng-click="sb.find()">
