--- a/src/saved-searches/components/save-search.directive.html
+++ b/src/saved-searches/components/save-search.directive.html
@@ -1,5 +1,5 @@
 <p>
-    <strong translate-once="search.savedSearches.yourSearch">Jouw zoekopdracht</strong>
+    <strong translate-once="search.savedSearches.yourSearch"></strong>
     <a href="#" ng-click="saveSearch()" class="btn btn-sm btn-default">
         <i class="fa fa-bookmark-o"></i> <span translate-once="search.savedSearches.save"></span>
     </a>
