--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -5,6 +5,12 @@
             role="button"
             ng-class="{disabled: !duplication.readyForDuplication}"
             translate-once="duplicate.title"></button>
+    <button class="btn btn-success"
+            ng-disabled="duplication.duplicating"
+            ng-click="duplication.createDuplicateAsMovie()"
+            role="button"
+            ng-class="{disabled: !duplication.readyForDuplication}"
+            translate-once="duplicate.duplicate_as_movie"></button>
     <i class="fa fa-circle-o-notch fa-spin" ng-show="duplication.duplicating"></i>
     <span ng-show="duplication.asyncError" translate-once="duplicate.error"></span>
 </div>
