Show button only when the user has correct permissions and event correct label

--- a/src/duplication/event-duplication-footer.component.html
+++ b/src/duplication/event-duplication-footer.component.html
@@ -6,6 +6,7 @@
             ng-class="{disabled: !duplication.readyForDuplication}"
             translate-once="duplicate.title"></button>
     <button class="btn btn-success"
+            ng-if="duplication.showDuplicateAsMovie"
             ng-disabled="duplication.duplicating"
             ng-click="duplication.createDuplicateAsMovie()"
             role="button"
