Add info to modal header

--- a/src/styles/udb3-angular.less
+++ b/src/styles/udb3-angular.less
@@ -34,3 +34,5 @@
 @import "moderation.less";
 @import "organization-search-item.less";
 @import "organizer-edit.less";
+
+@import "search-facilities-modal.less";
