--- a/src/styles/search-facilities-modal.less
+++ b/src/styles/search-facilities-modal.less
@@ -2,12 +2,12 @@
   display: inline-flex;
   justify-content: space-between;
   width: 100%;
-}
 
-.modal-header::before {
-  display: none;
-}
+  &::before {
+    display: none;
+  }
 
-.modal-header::after {
-  display: none;
+  &::after {
+    display: none;
+  }
 }
