--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -1,7 +1,7 @@
 <div class="form-group">
     <div class="card-system">
         <label translate="uitpas.cardSystems.card_systems"></label>
-        <span ng-hide="cardSystemSelector.uitpasUnavailable || (cardSystemSelector.availableCardSystems !== undefined)">
+        <span ng-hide="cardSystemSelector.uitpasUnavailableType || (cardSystemSelector.availableCardSystems !== undefined)">
             <i class="fa fa-circle-o-notch fa-spin"></i> Loading...
         </span>
         <span ng-show="cardSystemSelector.persistingCardSystems">
