Conditionally show refresh button

--- a/src/uitpas/components/card-systems/card-systems.html
+++ b/src/uitpas/components/card-systems/card-systems.html
@@ -35,7 +35,7 @@
 
         <div class="alert alert-danger" role="alert" ng-show="cardSystemSelector.uitpasUnavailableType">
             <p translate="uitpas.cardSystems.{{cardSystemSelector.uitpasUnavailableType}}"></p>
-            <button class="btn btn-default" ng-click="cardSystemSelector.refresh()" translate="uitpas.cardSystems.retry"></button>
+            <button ng-if="cardSystemSelector.uitpasUnavailableType === 'not_found'" class="btn btn-default" ng-click="cardSystemSelector.refresh()" translate="uitpas.cardSystems.retry"></button>
         </div>
     </div>
 </div>
