--- a/src/search/components/label-select.html
+++ b/src/search/components/label-select.html
@@ -27,6 +27,6 @@
 
 <ul class="list-inline">
   <li ng-repeat="label in select.labels">
-    <span class="badge">{{label.name}} <a ng-click="select.onRemove(label)" class="badge-remove">&times;</a></span>
+    <span ng-show="label.name !== 'new-entry-form'" class="badge">{{label.name}} <a ng-click="select.onRemove(label)" class="badge-remove">&times;</a></span>
   </li>
 </ul>
